    to state the current ordering metric.

    o subset_scores() function now allows filtering by P-value. Note that this
    is only applicable to the output of the pValue_GO() function mentioned
    above.

    o Backward compatibility with Ensembl annotation releases 75 and earlier,
    which used 'external_gene_id', which was renamed to 'external_gene_name'
    in releases 76 and later.


UPDATED FEATURES:

    o Allow user to override row_labels in heatmap_GO. This way, the 
    color-coding of the sample can be kept, while better description of the
    samples can be used to label them, instead of the phenodata values.

GENERAL UPDATES:

    o Updated the AlvMac training dataset to include 'RPL36A' an example
    of multiple Ensembl gene identifier annotated to the same gene name.

    o Updated the AlvMac example custom annotations to match the updated
    dataset.

    o Updated the example AlvMac_results to match the updated dataset.

    o Set the random seed prior to running the GO_analyse() example in 
    the vignette. Hopefully, this should allow reproducible testing by the
    users.

    o In User Guide, load package before loading the attached data.

    o In User Guide, new sections and examples dealing with the re-labelling
    of heatmap samples, the use of P-values, the re-ranking and subsetting
    of results using P-values. New sub-sections for clarity. Emphasis on
    the use and generation of local annotation, rather than use of current
    online Ensembl annotation release.

    o No more code connecting to the Ensembl server in any the help files
    and User Guide.

    o Help pages examples with more consistent indentation of code.

CHANGES IN VERSION 1.1.5
--------------------------

BUG FIXES:

    o Forgot to commit image file of shiny screenshot in release 1.1.5

CHANGES IN VERSION 1.1.4
--------------------------

NEW FEATURES:

    o Custom annotations can be provided to the GO_analyse function using